[gd_scene load_steps=6 format=3 uid="uid://djuaf2hp7l7b5"]

[ext_resource type="Script" path="res://script/grinder/boss_ai/ramses/hand_controller.gd" id="1_3xho2"]
[ext_resource type="PackedScene" uid="uid://cdjyb0jsadfn4" path="res://scenes/boss4/left_hand_2.tscn" id="1_a0yjq"]
[ext_resource type="AudioStream" uid="uid://dsc4lj3vbtiwd" path="res://audio/sfx/newer/hit_danger.mp3" id="3_svqnr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cihm1"]
size = Vector3(2.8, 18.4, 12.9)

[sub_resource type="SphereShape3D" id="SphereShape3D_yagb8"]
radius = 5.0

[node name="ramses_left" type="CharacterBody3D"]
collision_layer = 256
collision_mask = 16
script = ExtResource("1_3xho2")

[node name="col_body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.98023e-08, 0.75, -4.15)
shape = SubResource("BoxShape3D_cihm1")

[node name="spin_y" type="Node3D" parent="."]

[node name="mesh_" type="Node3D" parent="spin_y"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="left_hand3" parent="spin_y/mesh_" instance=ExtResource("1_a0yjq")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, -1.4, -0.9)

[node name="hitbox" type="Area3D" parent="spin_y"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.3, -3, 0)
collision_layer = 2
collision_mask = 4
input_ray_pickable = false
monitorable = false

[node name="hurt_radius" type="CollisionShape3D" parent="spin_y/hitbox"]
shape = SubResource("SphereShape3D_yagb8")

[node name="eye_gun" type="Marker3D" parent="spin_y"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="attacked_sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_svqnr")
unit_size = 25.0
pitch_scale = 0.6

[node name="_invuln_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="area_entered" from="spin_y/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="_invuln_timer" to="." method="_on__invuln_timer_timeout"]
